--- a/package.json
+++ b/package.json
@@ -4,115 +4,54 @@
   "description": "Checklist and Inspection manager",
   "keywords": [],
   "dependencies": {
-    "@babel/plugin-proposal-export-default-from": "^7.2.0",
-    "@mewe/coinspect-lastpass": "~1.0.4",
-    "@mewe/mewe-email-agent": "0.1.12",
-    "@mewe/mewe-s3fy": "~0.1.4",
-    "@mewe/sails": "^0.12.5",
-    "assert": "~1.3.0",
-    "async": "~2.0.1",
-    "auth": "latest",
-    "aws-sdk": "~2.224.1",
-    "aws-xray-sdk": "~1.1.1",
-    "bcryptjs": "~2.4.3",
-    "bindings": "~1.2.1",
-    "bluebird": "latest",
-    "body-parser": "~1.10.1",
-    "coffeescript": "latest",
-    "connect-redis": "3.1.0",
-    "connect-timeout": "~1.7.0",
-    "continuation-local-storage": "~3.2.0",
-    "convict": "~4.4.0",
-    "correlation-id": "~2.1.1",
-    "cors": "~2.8.1",
-    "csvtojson": "1.1.12",
-    "decree": "latest",
-    "dotenv": "^8.0.0",
-    "elasticsearch": "~14.2.2",
-    "expect.js": "~0.3.1",
-    "express": "~4.16.3",
-    "express-partials": "0.3.0",
-    "express-useragent": "~1.0.12",
-    "findup-sync": "latest",
-    "firebase-admin": "~5.12.0",
-    "fs-extra": "~0.30.0",
-    "fs-extra-promise": "~0.4.1",
-    "graceful-fs": "~4.1.2",
-    "grunt": "~1.0.1",
-    "grunt-ngdocs": "^0.2.11",
-    "hiredis": "~0.5.0",
-    "hmacsha1": "~1.0.0",
-    "http-aws-es": "~3.1.3",
-    "include-all": "~0.1.3",
-    "influx": "~5.0.7",
-    "jade": "~1.7.0",
-    "jasmine-core": "^3.3.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "jquery": "~2.2.1",
-    "json2csv": "3.7.1",
-    "jsonwebtoken": "^8.5.1",
-    "karma-jasmine": "^2.0.1",
-    "knex": "~0.12.9",
-    "kue": "~0.11.5",
-    "libpq": "~1.8.7",
-    "lodash": "~4.14.2",
-    "md5": "~2.2.1",
-    "mkdirp": "~0.5.1",
-    "moment": "2.18.0",
-    "moment-duration-format": "^2.2.2",
-    "moment-timezone": "~0.5.11",
-    "ncp": "~2.0.0",
-    "ngreact": "^0.5.2",
-    "ngrok": "^3.1.1",
-    "node-dm": "2.1.1",
-    "node-schedule": "~1.1.1",
-    "node-uuid": "1.4.7",
-    "node-zip": "~1.1.1",
-    "nopt": "latest",
-    "numeral": "~1.5.3",
-    "on-finished": "~2.3.0",
-    "optimist": "latest",
-    "owasp-password-strength-test": "~1.3.0",
-    "passport": "latest",
-    "passport-custom": "^1.0.5",
-    "passport-local": "latest",
-    "passport-saml": "~0.15.0",
-    "password-generator": "~2.1.0",
-    "pg": "~6.4.2",
-    "pg-native": "~2.2.0",
-    "pretty-error": "~2.0.2",
-    "prop-types": "^15.7.2",
-    "protractor-beautiful-reporter": "~0.5.0",
-    "raven": "~2.5.0",
-    "rc": "~1.1.6",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react2angular": "^4.0.6",
-    "redis": "~2.6.2",
-    "request": "~2.81.0",
-    "request-promise": "~4.1.0",
-    "require-directory": "~2.1.0",
-    "sails-generate-auth": "~0.3.1",
-    "sails-hook-dotenv": "~0.1.1",
-    "sails-postgresql": "~0.11.4",
-    "sails-redis": "~0.10.5",
-    "sequelize": "~3.33.0",
-    "sequelize-cli": "~2.4.0",
-    "sequelize-to-json": "~0.10.2",
-    "sinon": "^5.0.1-next.1",
-    "skipper": "~0.6.4",
-    "slurp": "~0.6.2",
-    "socket.io-client": "~1.4.8",
-    "tldjs": "~2.2.0",
-    "tmp": "0.0.28",
-    "toposort-class": "~1.0.1",
-    "uglify-es": "github:mishoo/UglifyJS2#harmony",
-    "unzip": "~0.1.11",
-    "uuid": "~2.0.2",
-    "waterline": "~0.12.2",
-    "winston": "~2.3.1",
-    "winston-logstash": "~0.4.0",
-    "xss": "~1.0.3"
+        "@fortawesome/fontawesome-pro": "^5.8.1",
+        "@fortawesome/fontawesome-svg-core": "^1.2.17",
+        "@fortawesome/free-brands-svg-icons": "^5.8.1",
+        "@fortawesome/free-regular-svg-icons": "^5.8.1",
+        "@fortawesome/free-solid-svg-icons": "^5.8.1",
+        "@fortawesome/pro-light-svg-icons": "^5.8.1",
+        "@fortawesome/pro-regular-svg-icons": "^5.8.1",
+        "@fortawesome/pro-solid-svg-icons": "^5.8.1",
+        "@fortawesome/react-fontawesome": "^0.1.4",
+        "@material-ui/core": "^4.0.2",
+        "@types/node": "^11.13.5",
+        "@types/react": "^16.8.13",
+        "@types/react-dom": "^16.8.4",
+        "@types/react-redux": "^7.0.8",
+        "axios": "^0.19.0",
+        "classnames": "^2.2.6",
+        "connected-react-router": "^6.5.0",
+        "copy-webpack-plugin": "^5.0.2",
+        "css-loader": "^2.1.1",
+        "dotenv-webpack": "^1.7.0",
+        "express": "^4.16.4",
+        "extract-text-webpack-plugin": "^3.0.2",
+        "history": "^4.9.0",
+        "node-sass": "^4.12.0",
+        "pdfjs-dist": "^2.0.943",
+        "purify-css": "^1.2.5",
+        "purifycss-webpack": "^0.7.0",
+        "react": "^16.8.6",
+        "react-dom": "^16.8.6",
+        "react-dropzone": "^10.1.5",
+        "react-fontawesome": "^1.6.1",
+        "react-form-validator-core": "^0.6.3",
+        "react-material-ui-form-validator": "^2.0.8",
+        "react-motion": "^0.5.2",
+        "react-redux": "^6.0.1",
+        "react-router-dom": "^5.0.0",
+        "react-spring": "^8.0.25",
+        "react-templates": "^0.6.3",
+        "react-templates-loader": "^0.6.5",
+        "redux": "^4.0.1",
+        "redux-promise-middleware": "^6.1.0",
+        "redux-thunk": "^2.3.0",
+        "reselect": "^4.0.0",
+        "sass-loader": "^7.1.0",
+        "simple-react-validator": "^1.0.7",
+        "style-loader": "^0.23.1",
+        "usa-states": "0.0.5",
+        "video-react": "^0.13.9"
   },
   "scripts": {
     "start": "node --harmony app.js",
