--- a/package.json
+++ b/package.json
@@ -4,226 +4,58 @@
   "description": "Checklist and Inspection manager",
   "keywords": [],
   "dependencies": {
-        "@fortawesome/fontawesome-pro": "^5.8.1",
-        "@fortawesome/fontawesome-svg-core": "^1.2.17",
-        "@fortawesome/free-brands-svg-icons": "^5.8.1",
-        "@fortawesome/free-regular-svg-icons": "^5.8.1",
-        "@fortawesome/free-solid-svg-icons": "^5.8.1",
-        "@fortawesome/pro-light-svg-icons": "^5.8.1",
-        "@fortawesome/pro-regular-svg-icons": "^5.8.1",
-        "@fortawesome/pro-solid-svg-icons": "^5.8.1",
-        "@fortawesome/react-fontawesome": "^0.1.4",
-        "@material-ui/core": "^4.0.2",
-        "@types/node": "^11.13.5",
-        "@types/react": "^16.8.13",
-        "@types/react-dom": "^16.8.4",
-        "@types/react-redux": "^7.0.8",
-        "axios": "^0.19.0",
-        "classnames": "^2.2.6",
-        "connected-react-router": "^6.5.0",
-        "copy-webpack-plugin": "^5.0.2",
-        "css-loader": "^2.1.1",
-        "dotenv-webpack": "^1.7.0",
+        "@moebius/http-graceful-shutdown": "^1.1.0",
+        "@newrelic/native-metrics": "^4.1.0",
+        "@sentry/node": "^4.6.6",
+        "@types/amqplib": "^0.5.12",
+        "@types/datadog-metrics": "^0.6.0",
+        "@types/deep-extend": "^0.4.31",
+        "@types/express": "^4.16.1",
+        "@types/jest": "^24.0.11",
+        "@types/joi": "^14.3.3",
+        "@types/jsonfile": "^4.0.1",
+        "@types/mock-knex": "^0.4.0",
+        "@types/newrelic": "^4.11.0",
+        "@types/node": "^10.12.18",
+        "@types/node-fetch": "^2.3.3",
+        "@types/request-promise-native": "^1.0.15",
+        "@types/swagger-jsdoc": "0.0.2",
+        "@types/swagger-ui-express": "^3.0.0",
+        "amqplib": "^0.5.3",
+        "body-parser": "^1.18.3",
+        "datadog-metrics": "^0.8.1",
+        "dd-trace": "^0.10.3",
+        "deep-extend": "^0.6.0",
         "express": "^4.16.4",
-        "extract-text-webpack-plugin": "^3.0.2",
-        "history": "^4.9.0",
-        "node-sass": "^4.12.0",
-        "pdfjs-dist": "^2.0.943",
-        "purify-css": "^1.2.5",
-        "purifycss-webpack": "^0.7.0",
-        "react": "^16.8.6",
-        "react-dom": "^16.8.6",
-        "react-dropzone": "^10.1.5",
-        "react-fontawesome": "^1.6.1",
-        "react-form-validator-core": "^0.6.3",
-        "react-material-ui-form-validator": "^2.0.8",
-        "react-motion": "^0.5.2",
-        "react-redux": "^6.0.1",
-        "react-router-dom": "^5.0.0",
-        "react-spring": "^8.0.25",
-        "react-templates": "^0.6.3",
-        "react-templates-loader": "^0.6.5",
-        "redux": "^4.0.1",
-        "redux-promise-middleware": "^6.1.0",
-        "redux-thunk": "^2.3.0",
-        "reselect": "^4.0.0",
-        "sass-loader": "^7.1.0",
-        "simple-react-validator": "^1.0.7",
-        "style-loader": "^0.23.1",
-        "usa-states": "0.0.5",
-        "video-react": "^0.13.9"
-  },
-  "scripts": {
-    "start": "node --harmony app.js",
-    "start:feature:server": "forever start -c /bin/bash ./test/feature/server",
-    "debug": "node debug app.js",
-    "dev": "nodemon app.js -- --environment=development",
-    "testing": "NODE_ENV=testing npm start",
-    "build": "node_modules/.bin/grunt build",
-    "build:views": "node scripts/build-views.js",
-    "develop": "./dev",
-    "develop:console": "node app.js",
-    "nsolid": "nsolid app.js",
-    "test": "echo 'please use either npm run test:server, test:frontend or test:frontend:ci' && exit 1",
-    "test:ipm:server": "NODE_ENV=testing mocha --opts ./packages/mocha.opts",
-    "test:ipm:frontend": "TEST_IPM_PACKAGES=true karma start",
-    "test:ipm:frontend:ci": "TEST_IPM_PACKAGES=true karma start --single-run",
-    "test:ipm:feature": "TEST_IPM_PACKAGES=true npm run test:core:feature ",
-    "test:core:server": "NODE_ENV=testing mocha --opts ./test/mocha.opts",
-    "test:core:config": "NODE_ENV=testing mocha --opts ./test/mocha.config.opts",
-    "test:core:controllers": "NODE_ENV=testing mocha --opts ./test/mocha.controllers.opts",
-    "test:core:integration": "NODE_ENV=testing mocha --opts ./test/mocha.integration.opts",
-    "test:core:orm": "NODE_ENV=testing mocha --opts ./test/mocha.orm.opts",
-    "test:core:services": "NODE_ENV=testing mocha --opts ./test/mocha.services.opts",
-    "test:core:frontend": "npm run build && karma start && karma start karma.webpack.config.js --single-run=true",
-    "test:core:frontend:agent": "npm run build && USER=agent karma start",
-    "test:core:frontend:ci": "npm run build && karma start --single-run",
-    "test:core:feature": "wdio wdio.standalone.conf.js",
-    "test:server": "npm run test:core:server && npm run test:ipm:server",
-    "test:frontend": "npm run test:core:frontend",
-    "test:frontend:ci": "npm run test:core:frontend:ci",
-    "test:jest:ci": "./node_modules/.bin/jest",
-    "test:feature": "npm run test:core:feature && npm run test:ipm:feature",
-    "test:selenium": "./test/feature/test",
-    "test:all": "npm run test:lint && npm run test:server && npm run build && npm run test:frontend:ci && USER=agent npm run test:frontend:ci && npm run test:selenium",
-    "test:lint": "eslint --fix $(git diff-tree --no-commit-id --name-only -r HEAD~0)",
-    "test:webpack": "./node_modules/.bin/karma start karma.webpack.config.js",
-    "test:webpack:ci": "./node_modules/.bin/karma start karma.webpack.config.js --single-run=true",
-    "coffeelint": "coffeelint api/ packages/ assets/",
-    "sequelize": "sequelize",
-    "migrate:new": "sequelize migration:create",
-    "migrate:up": "sequelize db:migrate",
-    "migrate:undo": "sequelize db:migrate:undo",
-    "migration-sync": "node scripts/migration-sync.js",
-    "base:develop": "./build-base.sh develop",
-    "base:master": "./build-base.sh master",
-    "jsdoc:start": "nodemon -x 'jsdoc -c jsdoc.json'",
-    "font-sync": "node scripts/s3.js",
-    "deploy:assets": "node scripts/deploy-assets.js",
-    "protractor": "protractor test/e2e/protractor.conf.js",
-    "seed:up": "sequelize db:seed:all",
-    "seed:undo": "sequelize db:seed:undo:all",
-    "permissions:load": "node scripts/load-permissions.js"
-  },
-  "lint-staged": {
-    "*.js": [
-      "eslint --fix"
-    ]
-  },
-  "main": "app.js",
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/mac/ams.git"
-  },
-  "author": "CoInspect OneTeam",
-  "license": "",
-  "devDependencies": {
-    "@babel/core": "~7.1.6",
-    "@babel/polyfill": "~7.0.0",
-    "@babel/preset-env": "~7.1.6",
-    "@babel/preset-react": "^7.0.0",
-    "angular": "~1.4.14",
-    "angular-mocks": "~1.4.14",
-    "angular-scroll": "~1.0.2",
-    "babel-core": "~7.0.0-bridge.0",
-    "babel-jest": "^23.6.0",
-    "babel-loader": "~8.0.4",
-    "babel-plugin-angularjs-annotate": "~0.9.0",
-    "babel-preset-es2015": "~6.24.1",
-    "babel-register": "~6.24.0",
-    "bower": "~1.3.1",
-    "casual": "~1.5.11",
-    "chai": "~3.5.0",
-    "chai-as-promised": "~6.0.0",
-    "chai-iterator": "~1.1.1",
-    "cheerio": "~1.0.0-rc.2",
-    "coffeelint": "~1.15.7",
-    "css-loader": "~1.0.1",
-    "enzyme": "^3.10.0",
-    "enzyme-adapter-react-16": "^1.14.0",
-    "enzyme-to-json": "^3.3.5",
-    "eslint": "~3.19.0",
-    "eslint-config-airbnb": "~10.0.1",
-    "eslint-plugin-import": "~1.16.0",
-    "eslint-plugin-jsx-a11y": "~2.2.3",
-    "eslint-plugin-mocha": "4.9.0",
-    "eslint-plugin-react": "^7.14.2",
-    "eyeglass": "~1.6.0",
-    "eyeglass-restyle": "^1.2.0",
-    "firebase": "~5.2.0",
-    "forever": "~0.15.3",
-    "grunt-autoprefixer": "~3.0.4",
-    "grunt-babel": "~8.0.0",
-    "grunt-contrib-clean": "~1.0.0",
-    "grunt-contrib-coffee": "~1.0.0",
-    "grunt-contrib-concat": "~1.0.1",
-    "grunt-contrib-copy": "~1.0.0",
-    "grunt-contrib-cssmin": "~1.0.2",
-    "grunt-contrib-jade": "~1.0.0",
-    "grunt-contrib-jst": "~1.0.0",
-    "grunt-contrib-uglify": "~2.3.0",
-    "grunt-contrib-watch": "~1.0.0",
-    "grunt-jsdoc": "~2.1.0",
-    "grunt-newer": "~1.3.0",
-    "grunt-sails-linker": "~0.10.1",
-    "grunt-sass": "~2.0.0",
-    "grunt-sync": "~0.6.2",
-    "grunt-webpack": "~3.1.3",
-    "husky": "~0.13.3",
-    "jest": "^23.6.0",
-    "jsdoc": "~3.4.3",
-    "karma": "~1.7.1",
-    "karma-babel-preprocessor": "~6.0.1",
-    "karma-chai": "~0.1.0",
-    "karma-chrome-launcher": "^2.0.0",
-    "karma-coffee-preprocessor": "~1.0.1",
-    "karma-junit-reporter": "~1.1.0",
-    "karma-mocha": "~1.1.1",
-    "karma-phantomjs-launcher": "~1.0.4",
-    "karma-polyfill": "~1.0.0",
-    "karma-sinon-chai": "~1.2.3",
-    "karma-sourcemap-loader": "~0.3.7",
-    "karma-spec-reporter": "0.0.26",
-    "karma-webpack": "~3.0.5",
-    "lint-staged": "3.4.2",
-    "list-directory-contents": "0.0.3",
-    "mini-css-extract-plugin": "^0.7.0",
-    "mocha": "~3.5.3",
-    "mocha-multi": "~1.0.1",
-    "mock-aws": "~1.2.3",
-    "ngreact": "^0.5.2",
-    "nightwatch": "~0.9.6",
-    "nock": "~9.0.2",
-    "node-sass": "^4.10.0",
-    "nodemon": "~1.10.0",
-    "null-loader": "^2.0.0",
-    "optimize-css-assets-webpack-plugin": "^5.0.1",
-    "phantomjs-prebuilt": "~2.1.14",
-    "pm2": "~1.1.3",
-    "protractor": "~5.4.1",
-    "protractor-image-comparison": "~1.5.1",
-    "puppeteer": "^1.11.0",
-    "raw-loader": "~0.5.1",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "s3": "~4.4.0",
-    "sails-hook-autoreload": "~0.13.2",
-    "sass-loader": "~7.1.0",
-    "sinon-chai": "~3.0.0",
-    "style-loader": "~0.23.1",
-    "supertest": "~2.0.0",
-    "supertest-as-promised": "~4.0.0",
-    "terser-webpack-plugin": "^1.3.0",
-    "uglify-js": "^3.4.9",
-    "v8-profiler": "latest",
-    "validate-arguments": "0.0.8",
-    "wdio-junit-reporter": "~0.1.0",
-    "wdio-mocha-framework": "~0.5.10",
-    "wdio-selenium-standalone-service": "0.0.5",
-    "wdio-spec-reporter": "0.0.3",
-    "webdriverio": "~4.2.3",
-    "webpack": "~4.26.0"
-  },
+        "express-correlation-id": "^1.2.1",
+        "fs": "^0.0.1-security",
+        "http-status-codes": "^1.3.2",
+        "jsonfile": "^4.0.0",
+        "knex": "^0.19.0",
+        "newrelic": "^5.9.1",
+        "node-fetch": "^2.5.0",
+        "pg": "^7.8.0",
+        "source-map-support": "^0.5.10",
+        "swagger-jsdoc": "^3.2.9",
+        "swagger-ui-express": "^4.0.2",
+        "tsoa": "^2.3.8",
+        "typescript": "^3.4.1"
+    },
+    "devDependencies": {
+        "@stryker-mutator/core": "^2.0.0",
+        "@stryker-mutator/html-reporter": "^2.0.0",
+        "@stryker-mutator/jest-runner": "^2.0.0",
+        "@stryker-mutator/typescript": "^2.0.0",
+        "@types/nock": "^10.0.1",
+        "get-port": "^5.0.0",
+        "jest": "^24.5.0",
+        "jest-junit": "^6.4.0",
+        "mock-knex": "^0.4.4",
+        "nock": "^10.0.6",
+        "stryker-cli": "^1.0.0",
+        "ts-jest": "^24.0.0",
+        "tslint": "^5.14.0"
+    },
   "resolutions": {
     "babel-core": "7.0.0-bridge.0",
     "angular": "~1.4.14"
