--- a/package.json
+++ b/package.json
@@ -4,59 +4,21 @@
   "description": "Checklist and Inspection manager",
   "keywords": [],
   "dependencies": {
-        "@moebius/http-graceful-shutdown": "^1.1.0",
-        "@newrelic/native-metrics": "^4.1.0",
-        "@sentry/node": "^4.6.6",
-        "@types/amqplib": "^0.5.12",
-        "@types/datadog-metrics": "^0.6.0",
-        "@types/deep-extend": "^0.4.31",
-        "@types/express": "^4.16.1",
-        "@types/jest": "^24.0.11",
-        "@types/joi": "^14.3.3",
-        "@types/jsonfile": "^4.0.1",
-        "@types/mock-knex": "^0.4.0",
-        "@types/newrelic": "^4.11.0",
-        "@types/node": "^10.12.18",
-        "@types/node-fetch": "^2.3.3",
-        "@types/request-promise-native": "^1.0.15",
-        "@types/swagger-jsdoc": "0.0.2",
-        "@types/swagger-ui-express": "^3.0.0",
-        "amqplib": "^0.5.3",
-        "body-parser": "^1.18.3",
-        "datadog-metrics": "^0.8.1",
-        "dd-trace": "^0.10.3",
-        "deep-extend": "^0.6.0",
-        "express": "^4.16.4",
-        "express-correlation-id": "^1.2.1",
-        "fs": "^0.0.1-security",
-        "http-status-codes": "^1.3.2",
-        "jsonfile": "^4.0.0",
-        "knex": "^0.19.0",
-        "newrelic": "^5.9.1",
-        "node-fetch": "^2.5.0",
-        "pg": "^7.8.0",
-        "source-map-support": "^0.5.10",
-        "swagger-jsdoc": "^3.2.9",
-        "swagger-ui-express": "^4.0.2",
-        "tsoa": "^2.3.8",
-        "typescript": "^3.4.1",
-        "url-regex": "^5.0.0"
-    },
-    "devDependencies": {
-        "@stryker-mutator/core": "^2.0.0",
-        "@stryker-mutator/html-reporter": "^2.0.0",
-        "@stryker-mutator/jest-runner": "^2.0.0",
-        "@stryker-mutator/typescript": "^2.0.0",
-        "@types/nock": "^10.0.1",
-        "get-port": "^5.0.0",
-        "jest": "^24.5.0",
-        "jest-junit": "^6.4.0",
-        "mock-knex": "^0.4.4",
-        "nock": "^10.0.6",
-        "stryker-cli": "^1.0.0",
-        "ts-jest": "^24.0.0",
-        "tslint": "^5.14.0"
-    },
+    "@reactivex/rxjs": "^6.5.2",
+    "@types/lodash": "^4.14.136",
+    "@types/request": "^2.48.1",
+    "@types/request-promise-native": "^1.0.16",
+    "bluebird": "^3.5.5",
+    "firebase-admin": "^8.2.0",
+    "firebase-functions": "^3.0.2",
+    "lodash": "^4.17.14",
+    "request": "^2.88.0",
+    "request-promise-native": "^1.0.7"
+  },
+  "devDependencies": {
+    "tslint": "^5.12.0",
+    "typescript": "^3.2.2"
+  },
   "resolutions": {
     "babel-core": "7.0.0-bridge.0",
     "angular": "~1.4.14"
