--- a/package.json
+++ b/package.json
@@ -4,124 +4,60 @@
   "description": "analytics angular ionic",
   "keywords": [],
  "dependencies": {
-    "@angular/common": "5.2.11",
-    "@angular/compiler": "5.2.11",
-    "@angular/compiler-cli": "5.2.11",
-    "@angular/core": "5.2.11",
-    "@angular/forms": "5.2.11",
-    "@angular/http": "5.2.11",
-    "@angular/platform-browser": "5.2.11",
-    "@angular/platform-browser-dynamic": "5.2.11",
-    "@ionic-native/app-rate": "4.8.0",
-    "@ionic-native/app-version": "4.8.0",
-    "@ionic-native/badge": "4.8.0",
-    "@ionic-native/calendar": "4.8.0",
-    "@ionic-native/camera": "4.8.0",
-    "@ionic-native/camera-preview": "4.8.0",
-    "@ionic-native/card-io": "4.8.0",
-    "@ionic-native/clipboard": "4.8.0",
-    "@ionic-native/code-push": "4.8.0",
-    "@ionic-native/contacts": "4.8.0",
-    "@ionic-native/core": "4.8.0",
-    "@ionic-native/date-picker": "4.8.0",
-    "@ionic-native/device": "4.8.0",
-    "@ionic-native/facebook": "4.8.0",
-    "@ionic-native/file": "4.8.0",
-    "@ionic-native/file-transfer": "4.8.0",
-    "@ionic-native/geolocation": "4.8.0",
-    "@ionic-native/google-analytics": "4.8.0",
-    "@ionic-native/in-app-browser": "4.8.0",
-    "@ionic-native/keyboard": "4.8.0",
-    "@ionic-native/network": "4.8.0",
-    "@ionic-native/push": "4.8.0",
-    "@ionic-native/siri-shortcuts": "4.8.0",
-    "@ionic-native/social-sharing": "4.8.0",
-    "@ionic-native/splash-screen": "4.8.0",
-    "@ionic-native/status-bar": "4.8.0",
-    "@ionic-native/stripe": "4.8.0",
-    "@ionic-native/toast": "4.8.0",
-    "@ionic-native/touch-id": "4.8.0",
-    "@ionic/cloud-angular": "^0.12.0",
-    "@ionic/storage": "2.2.0",
-    "@ngrx/core": "^1.2.0",
-    "@ngrx/store": "^4.1.1",
-    "@ngrx/store-devtools": "^4.0.0",
-    "@types/actioncable": "^5.2.0",
-    "@types/googlemaps": "^3.26.13",
-    "@types/payment": "^2.1.2",
-    "@types/uuid": "^3.4.4",
-    "actioncable": "^5.2.2",
-    "angular2-text-mask": "^8.0.5",
-    "branch-cordova-sdk": "3.1.6",
-    "card.io.cordova.mobilesdk": "^2.1.0",
-    "code-push": "^2.0.6",
-    "cordova-android": "7.1.1",
-    "cordova-clipboard": "^1.2.1",
-    "cordova-ios": "4.5.4",
-    "cordova-plugin-add-swift-support": "1.7.2",
-    "cordova-plugin-app-version": "^0.1.9",
-    "cordova-plugin-apprate": "^1.4.0",
-    "cordova-plugin-appsflyer-sdk": "^4.4.15",
-    "cordova-plugin-background-fetch": "^5.4.1",
-    "cordova-plugin-badge": "^0.8.8",
-    "cordova-plugin-calendar": "^4.6.0",
-    "cordova-plugin-camera": "^4.0.3",
-    "cordova-plugin-cocoalumberjack": "0.0.4",
-    "cordova-plugin-code-push": "^1.11.17",
-    "cordova-plugin-compat": "^1.2.0",
-    "cordova-plugin-console": "^1.1.0",
-    "cordova-plugin-contacts": "^3.0.1",
-    "cordova-plugin-datepicker": "^0.9.3",
-    "cordova-plugin-device": "^1.1.7",
-    "cordova-plugin-dialogs": "^1.3.4",
-    "cordova-plugin-facebook4": "^1.10.1",
-    "cordova-plugin-file": "^5.0.0",
-    "cordova-plugin-file-transfer": "^1.7.1",
-    "cordova-plugin-geolocation": "^2.4.3",
-    "cordova-plugin-globalization": "^1.11.0",
-    "cordova-plugin-google-analytics": "^1.8.6",
-    "cordova-plugin-inappbrowser": "^1.7.2",
-    "cordova-plugin-ionic-keyboard": "2.1.3",
-    "cordova-plugin-ionic-webview": "^1.2.1",
-    "cordova-plugin-nativestorage": "^2.3.2",
-    "cordova-plugin-network-information": "^1.3.4",
-    "cordova-plugin-siri-shortcuts": "0.0.9",
-    "cordova-plugin-splashscreen": "^4.1.0",
-    "cordova-plugin-statusbar": "^2.4.2",
-    "cordova-plugin-stripe": "^1.5.3",
-    "cordova-plugin-touch-id": "^3.4.0",
-    "cordova-plugin-whitelist": "^1.3.3",
-    "cordova-plugin-x-socialsharing": "^5.4.4",
-    "cordova-plugin-x-toast": "^2.7.2",
-    "cordova-plugin-zip": "^3.1.0",
-    "cordova-sqlite-storage": "^2.6.0",
-    "cordova-support-google-services": "^1.1.0",
-    "es6-promise-plugin": "^4.2.2",
-    "hammerjs": "^2.0.8",
-    "ionic-angular": "^3.9.2",
-    "ionic-native": "^2.9.0",
-    "ionicons": "3.0.0",
-    "jquery": "^3.4.0",
-    "moment": "^2.18.1",
-    "payment": "^2.2.1",
-    "phonegap-plugin-multidex": "^1.0.0",
-    "phonegap-plugin-push": "^2.2.3",
-    "plist": "^3.0.1",
-    "raven-js": "^3.27.0",
-    "rxjs": "^5.5.12",
-    "sw-toolbox": "3.6.0",
-    "typed.js": "^2.0.6",
-    "underscore": "^1.8.3",
-    "yarn": "^1.5.1",
-    "zone.js": "0.8.12"
-  },
-  "devDependencies": {
-    "@ionic/app-scripts": "^3.1.11",
-    "@types/hammerjs": "^2.0.36",
-    "i": "0.3.6",
-    "typescript": "2.4.2",
-    "ws": "3.3.2"
-  },
+        "@moebius/http-graceful-shutdown": "^1.1.0",
+        "@newrelic/native-metrics": "^4.1.0",
+        "@sentry/node": "^4.6.6",
+        "@types/amqplib": "^0.5.12",
+        "@types/datadog-metrics": "^0.6.0",
+        "@types/deep-extend": "^0.4.31",
+        "@types/express": "^4.16.1",
+        "@types/jest": "^24.0.11",
+        "@types/joi": "^14.3.3",
+        "@types/jsonfile": "^4.0.1",
+        "@types/mock-knex": "^0.4.0",
+        "@types/newrelic": "^4.11.0",
+        "@types/node": "^10.12.18",
+        "@types/node-fetch": "^2.3.3",
+        "@types/request-promise-native": "^1.0.15",
+        "@types/swagger-jsdoc": "0.0.2",
+        "@types/swagger-ui-express": "^3.0.0",
+        "amqplib": "^0.5.3",
+        "body-parser": "^1.18.3",
+        "datadog-metrics": "^0.8.1",
+        "dd-trace": "^0.10.3",
+        "deep-extend": "^0.6.0",
+        "express": "^4.16.4",
+        "express-correlation-id": "^1.2.1",
+        "fs": "^0.0.1-security",
+        "http-status-codes": "^1.3.2",
+        "jsonfile": "^4.0.0",
+        "knex": "^0.19.0",
+        "newrelic": "^5.9.1",
+        "node-fetch": "^2.5.0",
+        "pg": "^7.8.0",
+        "source-map-support": "^0.5.10",
+        "swagger-jsdoc": "^3.2.9",
+        "swagger-ui-express": "^4.0.2",
+        "tsoa": "^2.3.8",
+        "twilio": "^3.33.1",
+        "typescript": "^3.4.1",
+        "url-regex": "^5.0.0",
+    },
+    "devDependencies": {
+        "@stryker-mutator/core": "^2.0.0",
+        "@stryker-mutator/html-reporter": "^2.0.0",
+        "@stryker-mutator/jest-runner": "^2.0.0",
+        "@stryker-mutator/typescript": "^2.0.0",
+        "@types/nock": "^10.0.1",
+        "get-port": "^5.0.0",
+        "jest": "^24.5.0",
+        "jest-junit": "^6.4.0",
+        "mock-knex": "^0.4.4",
+        "nock": "^10.0.6",
+        "stryker-cli": "^1.0.0",
+        "ts-jest": "^24.0.0",
+        "tslint": "^5.14.0",
+    },
   "resolutions": {
     "babel-core": "7.0.0-bridge.0",
     "angular": "~1.4.14"
