--- a/package.json
+++ b/package.json
@@ -4,60 +4,111 @@
   "description": "analytics angular ionic",
   "keywords": [],
   "dependencies": {
-        "@moebius/http-graceful-shutdown": "^1.1.0",
-        "@newrelic/native-metrics": "^4.1.0",
-        "@sentry/node": "^4.6.6",
-        "@types/amqplib": "^0.5.12",
-        "@types/datadog-metrics": "^0.6.0",
-        "@types/deep-extend": "^0.4.31",
-        "@types/express": "^4.16.1",
-        "@types/jest": "^24.0.11",
-        "@types/joi": "^14.3.3",
-        "@types/jsonfile": "^4.0.1",
-        "@types/mock-knex": "^0.4.0",
-        "@types/newrelic": "^4.11.0",
-        "@types/node": "^10.12.18",
-        "@types/node-fetch": "^2.3.3",
-        "@types/request-promise-native": "^1.0.15",
-        "@types/swagger-jsdoc": "0.0.2",
-        "@types/swagger-ui-express": "^3.0.0",
-        "amqplib": "^0.5.3",
-        "body-parser": "^1.18.3",
-        "datadog-metrics": "^0.8.1",
-        "dd-trace": "^0.10.3",
-        "deep-extend": "^0.6.0",
-        "express": "^4.16.4",
-        "express-correlation-id": "^1.2.1",
-        "fs": "^0.0.1-security",
-        "http-status-codes": "^1.3.2",
-        "jsonfile": "^4.0.0",
-        "knex": "^0.19.0",
-        "newrelic": "^5.9.1",
-        "node-fetch": "^2.5.0",
-        "pg": "^7.8.0",
-        "source-map-support": "^0.5.10",
-        "swagger-jsdoc": "^3.2.9",
-        "swagger-ui-express": "^4.0.2",
-        "tsoa": "^2.3.8",
-        "twilio": "^3.33.1",
-        "typescript": "^3.4.1",
-        "url-regex": "^5.0.0"
-    },
-    "devDependencies": {
-        "@stryker-mutator/core": "^2.0.0",
-        "@stryker-mutator/html-reporter": "^2.0.0",
-        "@stryker-mutator/jest-runner": "^2.0.0",
-        "@stryker-mutator/typescript": "^2.0.0",
-        "@types/nock": "^10.0.1",
-        "get-port": "^5.0.0",
-        "jest": "^24.5.0",
-        "jest-junit": "^6.4.0",
-        "mock-knex": "^0.4.4",
-        "nock": "^10.0.6",
-        "stryker-cli": "^1.0.0",
-        "ts-jest": "^24.0.0",
-        "tslint": "^5.14.0"
-    },
+    "assert": "~1.3.0",
+    "async": "~2.0.1",
+    "auth": "latest",
+    "aws-sdk": "~2.224.1",
+    "aws-xray-sdk": "~1.1.1",
+    "bcryptjs": "~2.4.3",
+    "bindings": "~1.2.1",
+    "bluebird": "latest",
+    "body-parser": "~1.10.1",
+    "coffeescript": "latest",
+    "connect-redis": "3.1.0",
+    "connect-timeout": "~1.7.0",
+    "continuation-local-storage": "~3.2.0",
+    "convict": "~4.4.0",
+    "correlation-id": "~2.1.1",
+    "cors": "~2.8.1",
+    "csvtojson": "1.1.12",
+    "decree": "latest",
+    "dotenv": "^8.0.0",
+    "elasticsearch": "~14.2.2",
+    "expect.js": "~0.3.1",
+    "express": "~4.16.3",
+    "express-partials": "0.3.0",
+    "express-useragent": "~1.0.12",
+    "findup-sync": "latest",
+    "firebase-admin": "~5.12.0",
+    "fs-extra": "~0.30.0",
+    "fs-extra-promise": "~0.4.1",
+    "graceful-fs": "~4.1.2",
+    "grunt": "~1.0.1",
+    "grunt-ngdocs": "^0.2.11",
+    "hiredis": "~0.5.0",
+    "hmacsha1": "~1.0.0",
+    "http-aws-es": "~3.1.3",
+    "include-all": "~0.1.3",
+    "influx": "~5.0.7",
+    "jade": "~1.7.0",
+    "jasmine-core": "^3.3.0",
+    "jasmine-spec-reporter": "~4.2.1",
+    "jquery": "~2.2.1",
+    "json2csv": "3.7.1",
+    "jsonwebtoken": "^8.5.1",
+    "karma-jasmine": "^2.0.1",
+    "knex": "~0.12.9",
+    "kue": "~0.11.5",
+    "libpq": "~1.8.7",
+    "lodash": "~4.14.2",
+    "md5": "~2.2.1",
+    "mkdirp": "~0.5.1",
+    "moment": "2.18.0",
+    "moment-duration-format": "^2.2.2",
+    "moment-timezone": "~0.5.11",
+    "ncp": "~2.0.0",
+    "ngreact": "^0.5.2",
+    "ngrok": "^3.1.1",
+    "node-dm": "2.1.1",
+    "node-schedule": "~1.1.1",
+    "node-uuid": "1.4.7",
+    "node-zip": "~1.1.1",
+    "nopt": "latest",
+    "numeral": "~1.5.3",
+    "on-finished": "~2.3.0",
+    "optimist": "latest",
+    "owasp-password-strength-test": "~1.3.0",
+    "passport": "latest",
+    "passport-custom": "^1.0.5",
+    "passport-local": "latest",
+    "passport-saml": "~0.15.0",
+    "password-generator": "~2.1.0",
+    "pg": "~6.4.2",
+    "pg-native": "~2.2.0",
+    "pretty-error": "~2.0.2",
+    "prop-types": "^15.7.2",
+    "protractor-beautiful-reporter": "~0.5.0",
+    "raven": "~2.5.0",
+    "rc": "~1.1.6",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react2angular": "^4.0.6",
+    "redis": "~2.6.2",
+    "request": "~2.81.0",
+    "request-promise": "~4.1.0",
+    "require-directory": "~2.1.0",
+    "sails-generate-auth": "~0.3.1",
+    "sails-hook-dotenv": "~0.1.1",
+    "sails-postgresql": "~0.11.4",
+    "sails-redis": "~0.10.5",
+    "sequelize": "~3.33.0",
+    "sequelize-cli": "~2.4.0",
+    "sequelize-to-json": "~0.10.2",
+    "sinon": "^5.0.1-next.1",
+    "skipper": "~0.6.4",
+    "slurp": "~0.6.2",
+    "socket.io-client": "~1.4.8",
+    "tldjs": "~2.2.0",
+    "tmp": "0.0.28",
+    "toposort-class": "~1.0.1",
+    "uglify-es": "github:mishoo/UglifyJS2#harmony",
+    "unzip": "~0.1.11",
+    "uuid": "~2.0.2",
+    "waterline": "~0.12.2",
+    "winston": "~2.3.1",
+    "winston-logstash": "~0.4.0",
+    "xss": "~1.0.3"
+  },
   "resolutions": {
     "babel-core": "7.0.0-bridge.0",
     "angular": "~1.4.14"
